<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        tools:context="me.hani.diktat.ui.word.AddWordFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_add_word_artikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:ems="10"
                android:hint="@string/artikel"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_add_word_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:ems="10"
                android:hint="@string/word"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_add_word_plural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:ems="10"
                android:hint="@string/plural"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_add_word_save"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/main_bg"
                android:shadowRadius="5"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>

    </FrameLayout>
</layout>