<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/catListFragment">

    <fragment
        android:id="@+id/TestFragment"
        android:name="me.hani.diktat.ui.test.TestFragment"
        android:label="@string/all_diktat"
        tools:layout="@layout/fragment_test" >
        <action
            android:id="@+id/action_TestFragment_to_catListFragment"
            app:destination="@id/catListFragment" />
        <action
            android:id="@+id/action_TestFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/wordsListFragment" />
        <argument
            android:name="catName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="catId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="argsWordsList"
            app:argType="me.hani.diktat.database.Word[]"
            app:nullable="true"
            android:defaultValue="@null" />

    </fragment>
    <fragment
        android:id="@+id/addWordFragment"
        android:name="me.hani.diktat.ui.word.AddWordFragment"
        android:label="@string/add_new"
        tools:layout="@layout/fragment_add_word" >
        <action
            android:id="@+id/action_addWordFragment_to_wordsListFragment"
            app:destination="@id/wordsListFragment"
            app:popUpTo="@id/catListFragment" />
        <argument
            android:name="catName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="catId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="wordObj"
            app:argType="me.hani.diktat.database.Word"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/catListFragment"
        android:name="me.hani.diktat.ui.category.CatListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_cat_list" >
        <action
            android:id="@+id/action_catListFragment_to_TestFragment"
            app:destination="@id/TestFragment" />
        <action
            android:id="@+id/action_catListFragment_to_addWordFragment"
            app:destination="@id/addWordFragment" />
        <action
            android:id="@+id/action_catListFragment_to_addCatFragment"
            app:destination="@id/addCatFragment" />
        <action
            android:id="@+id/action_catListFragment_to_wordsListFragment"
            app:destination="@id/wordsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCatFragment"
        android:name="me.hani.diktat.ui.category.AddCatFragment"
        android:label="@string/fragment_add_cat"
        tools:layout="@layout/fragment_add_cat">
        <action
            android:id="@+id/action_addCatFragment_to_catListFragment"
            app:destination="@id/catListFragment" />
        <argument
            android:name="catId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="catName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/wordsListFragment"
        android:name="me.hani.diktat.ui.word.WordsListFragment"
        android:label="@string/words_list_title"
        tools:layout="@layout/fragment_words_list" >

        <argument
            android:name="catName"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_wordsListFragment_to_TestFragment"
            app:destination="@id/TestFragment" />
        <argument
            android:name="catId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_wordsListFragment_to_catListFragment"
            app:destination="@id/catListFragment" />
        <action
            android:id="@+id/action_wordsListFragment_to_addWordFragment"
            app:destination="@id/addWordFragment" />
        <argument
            android:name="argsWordsList"
            app:argType="me.hani.diktat.database.Word[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="me.hani.diktat.ui.result.ResultFragment"
        android:label="@string/fragment_result_title"
        tools:layout="@layout/fragment_result">
        <action
            android:id="@+id/action_resultFragment_to_catListFragment"
            app:destination="@id/catListFragment"
            app:popUpTo="@id/catListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="wordsNum"
            app:argType="integer" />
        <argument
            android:name="wrongWordsArray"
            app:argType="me.hani.diktat.database.Word[]"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="correctWordsArray"
            app:argType="me.hani.diktat.database.Word[]"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_resultFragment_to_wordsListFragment"
            app:destination="@id/wordsListFragment"
            app:popUpTo="@id/wordsListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="catName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="catId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>