<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        tools:context="me.hani.diktat.ui.test.TestFragment">

        <Button
            android:id="@+id/btn_volume_up"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/right_bg"
            app:icon="@drawable/ic_volume_up"
            app:iconGravity="textStart" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/la_test_correct"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:visibility="gone"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/correct" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/la_test_wrong"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:visibility="gone"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/wrong" />

                <EditText
                    android:id="@+id/et_test_artikel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/artikel"
                    android:inputType="textVisiblePassword" />

                <EditText
                    android:id="@+id/et_test_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/enter_word"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_test_plural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/plural"
                    android:inputType="textVisiblePassword" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_check_test"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/main_bg"
            android:enabled="false"
            android:text="@string/btn_check"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>